--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,5 +1,25 @@
 {
-  "profile": {
-    "header": "Profile"
+  "title": {
+    "profile": "Profile",
+    "language": "Languages",
+    "about": "Karol Has",
+    "experience": "Work experience",
+    "education": "Education",
+    "skills": "Skills"
+  },
+
+  "caption": {
+    "name": "Name",
+    "address": "Address",
+    "phone": "Phone",
+    "drivingLicense": "Driving License",
+    "polish": "Polish",
+    "english": "English"
+  },
+
+  "buttons": {
+    "downloadBtn": "Download PDF",
+    "linkedinBtn": "LinkedIn",
+    "githubBtn": "Github"
   }
 }
