--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -24,5 +24,9 @@
     "about": "Ambitny, zaradny Junior Front-End Developer tworzący strony internetowe z pasją i zaangażowaniem. Obecnie pracuję jako żołnierz i każdą chwilę poświęcam na tworzenie nowych projektów i doskonalenie się jako programista. Wyznaczam sobie cele i je realizuję - moim obecnym jest zdobycie pracy jako programista.",
     "backOfficeDesc": "Identyfikacja klienta z jego kontem na podstawie dostarczonych przez niego dokumentów",
     "educationPEdesc": "Certyfikowany instruktor akrobatyki i gimnastyki sportowej"
+  },
+
+  "link": {
+    "translatedCV": "/cv/src/assets/cv_pl.pdf"
   }
 }
